--- a/js_aula/exercicio_condicao/exer01/style.css
+++ b/js_aula/exercicio_condicao/exer01/style.css
@@ -1,4 +1,5 @@
 @charset "UFT-8";
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 *{
     box-sizing: border-box;
@@ -6,3 +7,25 @@
     margin: 0;
 }
 
+:root{
+    --color-bege:#F2EBBF;
+    --cor-laranja:#F3B562;
+    --cor-azul:#8CBEB2;
+    --cor-preto:#5C4B51;
+}
+
+body{
+    font-family: "Kanit", sans-serif;
+    background-color: black;
+}
+.caixa{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.caixa_conteudo{
+    background-color: white;
+    width: 320px;
+    border-radius: 6px;
+}
