--- a/js_aula/exercicio_repeticao/exer02/style.css
+++ b/js_aula/exercicio_repeticao/exer02/style.css
@@ -65,7 +65,7 @@ body{
 #passo{
     margin-left: 0.8em
 }
-.contar{
+.caixa_contar{
     align-self: center;
     width: 200px;
     font-size: 1rem;
