criando function para imagem

--- a/js_aula/condicao__simples/style.css
+++ b/js_aula/condicao__simples/style.css
@@ -71,7 +71,7 @@ span{
     background-color: var(--cor-amarelo);
 }
 .img{
-    background-image: url(img/cars-5970663_640.png);
+    background-image: url(img/carro.png);
     background-repeat: no-repeat;
     background-size: contain;
 }
