somando os valores

--- a/js_aula/exercicio_function/exer01/style.css
+++ b/js_aula/exercicio_function/exer01/style.css
@@ -52,7 +52,7 @@ body{
     background-color:var(--cor-azul-escuro);
     color: var(--color-branco);
 }
-#botao_verifica{
+#botao_verifica, #botao_limpar{
     display: none;
 }
 .caixa{
