--- a/desafios_alura/logica_programacao/desafio_imc/style.css
+++ b/desafios_alura/logica_programacao/desafio_imc/style.css
@@ -1,7 +1,41 @@
 @charset "uft-8";
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
 
 *{
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
+
+:root{
+ --font:"Varela Round", sans-serif;
+ --cor-branco:#ffffff;
+ --cor-cinza:hsl(204, 43%, 93%);
+ --cor-azul: hsla(179, 50%, 43%, 0.534);
+ --cor-azul-claro:hsla(179, 62%, 43%, 0.705);
+ --cor-amarelo:hsl(71, 73%, 54%);
+}
+
+body{
+    background-color: var(--cor-azul);
+    font-family: var(--font);
+    font-size: 1rem;
+    padding: 1em;
+}
+
+main{
+    height: 100vh;
+    background-color: #ffffff;
+    display: grid;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+}
+
+.caixa_conteudo{
+    width: 300px;
+    display: grid;
+    justify-items:center;
+
+}
+
