--- a/desafios_alura/logica_programacao/desafio_imc/style.css
+++ b/desafios_alura/logica_programacao/desafio_imc/style.css
@@ -78,9 +78,11 @@ main{
 }
 
 .botao:hover{
+    cursor: pointer;
     color: var(--cor-amarelo);
     border: 1px solid var(--cor-amarelo);
 }
 .alerta{
-    color: var(--cor-amarelo);
+    font-size: 14px;
+    color: red;
 }
